--- a/theme/snippets/jumplink-contact-form.liquid
+++ b/theme/snippets/jumplink-contact-form.liquid
@@ -76,7 +76,7 @@
       <div class="custom-control custom-checkbox mt-5 mb-1">
         <input type="checkbox" class="custom-control-input" name="contact[privacy]" id="acceptPrivacy" required>
         <label class="custom-control-label" for="acceptPrivacy">
-          Yes, I authorise the processing of my personal data according to the <a href="/pages/it-recht-datenschutz">Privacy Statement</a>.<br>
+          Yes, I authorise the processing of my personal data according to the <a href="/pages/it-recht-datenschutz">Privacy Policy</a>.<br>
         </label>
       </div>
       <p>The fields marked with * are required</p>
